[package]
name = "nm-proxy"
version = "0.2.0"
edition = "2021"
authors = ["Dennis Marttinen <twelho@welho.tech>"]
description = "Native messaging proxy for Flatpak'ed browsers"
repository = "https://github.com/twelho/nm-proxy"
license = "GPL-3.0-or-later"
keywords = ["browser", "flatpak", "native-messaging", "ipc"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "setup"
path = "src/setup/main.rs"

[profile.release]
lto = true      # Enable link-time optimizations
strip = true    # Strip symbols from the binary

[dependencies]
anyhow = "1.0.99"
byteorder = "1.5.0"
expanduser = "1.2.2"
libc = "0.2.175"
nix = { version = "0.30.1", features = ["signal"] }
rust-ini = "0.21.3"
sd-listen-fds = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-fd = "0.3.0"
tokio-util = "0.7.16"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
